Correción de Latam a Ecuador

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <!-- Slide 1: Título -->
         <div class="slide">
             <div class="slide-header">
-                <h1>🌦️ Análisis Predictivo de Sequías en América Latina</h1>
+                <h1>🌦️ Análisis Predictivo de Sequías en Ecuador</h1>
                 <p class="subtitle">Proyecto de Grid Computing Colaborativo</p>
             </div>
         </div>
@@ -312,7 +312,7 @@
 
                 <div class="objective-card">
                     <h3>Objetivo General</h3>
-                    <p>Diseñar e implementar un sistema inteligente de predicción de sequías que integre datos climáticos históricos y en tiempo real de múltiples países de América Latina, con el fin de emitir alertas tempranas y generar mapas de riesgo confiables.</p>
+                    <p>Diseñar e implementar un sistema inteligente de predicción de sequías que integre datos climáticos históricos y en tiempo real de las regiones de Ecuador, con el fin de emitir alertas tempranas y generar mapas de riesgo confiables.</p>
                 </div>
 
                 <h3>Objetivos Específicos</h3>
